--- a/stylish.css
+++ b/stylish.css
@@ -1,4 +1,4 @@
-p{ 
+p{div- 
 color: red;
 text-decoration: line-through;
 }
@@ -6,6 +6,23 @@ text-decoration: line-through;
 h1{ 
 color: green;
 text-transform: uppercase;
+margin-top: 20px;
+margin-right: 20px;
+margin-bottom: 20px;
+margin-left: 20px;
+padding-top: 40px;
+padding-bottom: 40px;
+padding-left: 40px;
+padding-right: 40px;
+border-top: 5px;
+border-left: 5px;
+border-bottom: 5px;
+border-right: 5px;
+border-style: solid;
+border-width: 1px;
+border-color: "#000000";
+
+
 }
 body {background-color: #808080; 
 font-family: sans-serif;
